--- a/Stadis.Intelligence.Web/appsettings.json
+++ b/Stadis.Intelligence.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-        "DefaultConnection": "Server=database-1.c1lnuamfhlwa.us-west-1.rds.amazonaws.com; Database=reveal-test-db; UId=admin;Password=ve8K09ZmNeiL3kwlrD9O"
+    "DefaultConnection": "Server=database-1.chgogj5vyme8.ap-south-1.rds.amazonaws.com; Database=temp_db; UId=admin;Password=Temp_5656"
 
   },
   "Logging": {
