--- a/Stadis.Intelligence.Web/Stadis.Intelligence.Web.csproj
+++ b/Stadis.Intelligence.Web/Stadis.Intelligence.Web.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <DisableSQLiteInteropFix>true</DisableSQLiteInteropFix>
   </PropertyGroup>
 
@@ -25,13 +25,16 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.95.4" />
     <PackageReference Include="MailKit" Version="2.13.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.17" />
-    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.22" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.22" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.15.0" />
     <PackageReference Include="Npgsql" Version="7.0.2" />
-    <PackageReference Include="Reveal.Sdk.AspNetCore" Version="1.5.0" />
+    <PackageReference Include="Reveal.Sdk.AspNetCore" Version="1.6.0" />
+    <PackageReference Include="Reveal.Sdk.Data.Google.Drive" Version="1.6.0" />
+    <PackageReference Include="Reveal.Sdk.Data.Microsoft.SqlServer" Version="1.6.0" />
+    <PackageReference Include="Reveal.Sdk.Data.PostgreSQL" Version="1.6.0" />
   </ItemGroup>
 
 </Project>
